[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.4", features = ["macros"] }
axum-macros = { version = "0.3.0-rc.3" }
cargo-manifest = "0.17.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
thiserror = "2.0.4"
tokio = "1.28.2"
toml = "0.8.19"
