[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
axum-macros = { version = "0.3.0-rc.3" }
cargo-manifest = "0.17.0"
chrono = "0.4.39"
jsonwebtoken = "9.3.0"
leaky-bucket = { version = "1.1.2", features = ["tracing"] }
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx", "sqlx-native-tls"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "uuid", "macros", "runtime-tokio", "chrono"] }
thiserror = "2.0.4"
tokio = "1.28.2"
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
